# autograph

./: .gitignore  Cargo.toml  README.md  dot2png.sh  render_dots.sh  requirements.txt
autograph_core/: Cargo.toml
autograph_core/src/: graph_builder.rs  knowledge_graph.rs  lib.rs
autograph_core/src/renderers/: mod.rs
autograph_core/tests/goldens/: test.dot
docs/: ACCURACY.md  TIME.md
python/: cluster_wiki.py  evaluate.ipynb  evaluate_other_algorithms.py  find_wiki_subgraph.py  graph_building.ipynb  rename_nodes.ipynb  script.py  show_cluster_results.ipynb  show_cluster_results_wiki.ipynb  show_progression.ipynb
src/: graph_builder.rs  knowledge_graph.rs  lib.rs  main.rs
src/renderers/: adjacency_matrix_images.rs  dot_files.rs  mod.rs
tests/goldens/: test.dot
tests/verifiers/: medium_0.dot  medium_1.dot  medium_2.dot  medium_3.dot  small.dot  small_1.dot  tiny.dot
